# Django-Cassandra

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
commands/: collectstatic.sh  format.sh  refreshdb.sh  run.prod.sh
web/backend/: asgi.py  settings.py
web/backend/asgi/: dev.py  production.py
web/backend/db/: cassandradb.py
web/backend/scripts/: encryptdb.py
web/backend/settings/: __init__.py  base.py  local.py  production.py
web/books/: admin.py  models.py
web/books/migrations/: 0001_initial.py
